# Zappy

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  assets  tester.sh
ai_src/: main.py  parse.py
ai_src/Player/: Elevation.py  Pendings.py  Player.py  Receiver.py  Resource.py
ai_src/ai/: core.py
ai_src/client_protocol/: protocol.py
ai_src/graphical_client/: graphical.py
ai_src/protocol/: protocol.py
graphical_client/: Makefile  communicator.h  graphical_client
graphical_client/src/: Dispatcher.cpp  Dispatcher.hpp  Egg.cpp  Egg.hpp  EggManager.cpp  EggManager.hpp  EndScreen.cpp  EndScreen.hpp  Flag.cpp  Flag.hpp  Game.cpp  Game.hpp  Map.cpp  Map.hpp  MapManager.cpp  MapManager.hpp  Orientation.hpp  Player.cpp  Player.hpp  PlayerInfo.cpp  PlayerInfo.hpp  PlayerManager.cpp  PlayerManager.hpp  Position.hpp  Resource.hpp  Responsive.cpp  Responsive.hpp  Singleton.hpp  String.cpp  String.hpp  TextureLoader.cpp  TextureLoader.hpp  Tile.cpp  Tile.hpp  TileInfo.cpp  TileInfo.hpp  World.cpp  World.hpp  communicator.cpp  communicator.hpp  (+1 more)
server_src/: cell.c  client.c  egg.c  event.c  game.c  game_objects.c  get_next_line.c  graphic.c  listeners.c  main.c  map.c  player.c  player_default.c  player_graphic.c  player_uninit.c  server.c  server_process.c  settings.c  sigint.c  strjoin.c  strsplit.c  tcp_socket.c  toto.c  utils1.c  utils2.c  vision.c
server_src/graphic_commands/: cmd_bct.c  cmd_mct.c  cmd_msz.c  cmd_pin.c  cmd_plv.c  cmd_ppo.c  cmd_sgt.c  cmd_sst.c  cmd_tna.c
server_src/include/: client.h  commands.h  egg.h  event.h  game_objects.h  get_next_line.h  list.h  listeners.h  map.h  player.h  (+3 more)
(+42 files in other folders)
